add storage user interactive features

--- a/frontend/html/upload.html
+++ b/frontend/html/upload.html
@@ -2,13 +2,116 @@
 <html>
   <head>
     <title>PennCloud</title>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </head>
+
   <body>
-    <h1>Upload</h1>
-    <form action="upload" method="POST" enctype="multipart/form-data">
+
+    <!-- <div>
       Select file to upload:
-      <input type="file" name="file" id="file" size="40">
-      <input type="submit" value="Upload File" name="submit">
-    </form>
+      <input type="file" name="file" id="fileToLoad" size="40">
+      <button onclick="loadFileAsText()">Load Selected File</button>
+    </div>
+
+    <div>
+      <textarea id="inputTextToSave"></textarea>
+    </div>
+
+    <script>
+      function loadFileAsText() {
+        var fileToLoad = document.getElementById("fileToLoad").files[0];
+        // console.log(document.getElementById("fileToLoad").files[0]);
+
+        var fileReader = new FileReader();
+        fileReader.onload = function(fileLoadedEvent) {
+            var textFromFileLoaded = fileLoadedEvent.target.result;
+            // document.getElementById("inputTextToSave").value = textFromFileLoaded;
+        };
+
+        // fileReader.readAsText(fileToLoad, "UTF-8");
+        fileReader.readAsDataURL(fileToLoad);
+      }
+    </script> -->
+
+    <div class="container">
+      <h1>Upload</h1>
+      <div class="panel panel-primary">
+        <div class="panel-heading">Create New Folder</div>
+        <div class="panel-body">
+          <form action="newfolder" method="post">
+            <input type="text" name="foldername" value="" placeholder="Folder Name"/>
+            <input type="submit" value="Create"/>
+          </form>
+        </div>
+      </div>
+
+      <div class="panel panel-primary">
+        <div class="panel-heading">Upload New File</div>
+        <div class="panel-body">
+          <form class="form-inline" action="upload" method="post" enctype="multipart/form-data">
+            <div class="form-group">
+              <input type="file" name="file" value="">
+            </div>
+            <div class="form-group">
+              <input type="submit" value="Upload"/>
+            </div>
+          </form>
+        </div>
+      </div>
+
+      <div class="panel panel-warning">
+        <div class="panel-heading">Move File</div>
+        <div class="panel-body">
+          <form action="movefile" method="post">
+            <input type="text" name="foldername" value="" placeholder="Filename">
+            <input type="text" name="oldname" value="" placeholder="Old Folder">
+            <input type="text" name="newname" value="" placeholder="New Folder">
+            <input type="submit" value="Move"/>
+          </form>
+        </div>
+      </div>
+
+      <div class="panel panel-warning">
+        <div class="panel-heading">Rename File</div>
+        <div class="panel-body">
+          <form action="renamefile" method="post">
+            <input type="text" name="foldername" value="" placeholder="Folder Name">
+            <input type="text" name="oldname" value="" placeholder="Old Name">
+            <input type="text" name="newname" value="" placeholder="New Name">
+            <input type="submit" value="Rename"/>
+          </form>
+        </div>
+      </div>
+
+      <div class="panel panel-danger">
+        <div class="panel-heading">Delete File</div>
+        <div class="panel-body">
+          <form action="deletefile" method="post">
+            <input type="text" name="foldername" value="" placeholder="Folder Name">
+            <input type="text" name="filename" value="" placeholder="Filename">
+            <input type="submit" value="Delete"/>
+          </form>
+        </div>
+      </div>
+
+      <div class="panel panel-danger">
+        <div class="panel-heading">Delete Folder</div>
+        <div class="panel-body">
+          <form action="deletefolder" method="post">
+            <input type="text" name="foldername" value="" placeholder="Folder Name">
+            <input type="submit" value="Delete"/>
+          </form>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
