enable download feature for text file/pdf/jpeg/png

--- a/frontend/html/download.html
+++ b/frontend/html/download.html
@@ -33,7 +33,7 @@
           </div>
         </div>
       </div>
-      <a href="upload">Back to Upload</a>
+      <a class="btn btn-primary" href="upload" role="button">Go to Upload</a>
     </div>
   </body>
 </html>
