--- a/frontend/html/upload.html
+++ b/frontend/html/upload.html
@@ -111,7 +111,7 @@
           </form>
         </div>
       </div>
+      <a class="btn btn-primary" href="download" role="button">Go to Download</a>
     </div>
-
   </body>
 </html>
