--- a/frontend/html/send-email.html
+++ b/frontend/html/send-email.html
@@ -20,18 +20,18 @@
         <div class="form-group">
           <label for="example-email-input" class="col-2 col-form-label">To</label>
           <div class="col-10">
-            <input class="form-control" type="email" value="username@gmail.com" id="example-email-input">
+            <input class="form-control" name="sentto" type="email" value="username@gmail.com" id="example-email-input">
           </div>
         </div>
         <div class="form-group">
           <label for="example-text-input" class="col-2 col-form-label">Subject</label>
           <div class="col-10">
-            <input class="form-control" type="text" value="title" id="example-text-input">
+            <input class="form-control" name="title" type="text" value="title" id="example-text-input">
           </div>
         </div>
         <div class="form-group">
           <label for="exampleTextarea">Content</label>
-          <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
+          <textarea class="form-control" name="content" id="exampleTextarea" rows="3"></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Send</button>
       </form>
