--- a/frontend/html/send-email.html
+++ b/frontend/html/send-email.html
@@ -16,7 +16,7 @@
   <body>
     <div class="container">
       <h1>Send Email</h1>
-      <form>
+      <form method="POST">
         <div class="form-group">
           <label for="example-email-input" class="col-2 col-form-label">To</label>
           <div class="col-10">
