--- a/frontend/html/user-home.html
+++ b/frontend/html/user-home.html
@@ -2,8 +2,26 @@
 <html>
   <head>
     <title>PennCloud</title>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </head>
+
   <body>
-    <h1>Hello $username</h1>
+    <div class="container">
+      <h1>Hello $username</h1>
+      <div class="panel panel-primary">
+        <div class="panel-body">
+          <a class="btn btn-success" href="upload" role="button">Drive</a>
+          <a class="btn btn-danger" href="inbox" role="button">Mail</a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
