show email list

--- a/frontend/html/inbox.html
+++ b/frontend/html/inbox.html
@@ -27,7 +27,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <!-- <tr>
             <th scope="row">1</th>
             <td>Mark</td>
             <td>Hello</td>
@@ -38,7 +38,8 @@
             <td>Jacob</td>
             <td>Hello</td>
             <td>Tuesday</td>
-          </tr>
+          </tr> -->
+          $maillist
         </tbody>
       </table>
     </div>
