--- a/frontend/html/user-home.html
+++ b/frontend/html/user-home.html
@@ -20,6 +20,7 @@
         <div class="panel-body">
           <a class="btn btn-success" href="upload" role="button">Drive</a>
           <a class="btn btn-danger" href="inbox" role="button">Mail</a>
+          <a class="btn btn-default" href="logout" role="button">Logout</a>
         </div>
       </div>
     </div>
