--- a/frontend/html/view-email.html
+++ b/frontend/html/view-email.html
@@ -20,24 +20,24 @@
         <div class="form-group">
           <label for="example-email-input" class="col-2 col-form-label">From</label>
           <div class="col-10">
-            <input class="form-control" type="email" value="username@gmail.com" id="example-email-input">
+            <input class="form-control" type="email" value="$from" id="example-email-input">
           </div>
         </div>
         <div class="form-group">
           <label for="example-text-input" class="col-2 col-form-label">Title</label>
           <div class="col-10">
-            <input class="form-control" type="text" value="title" id="example-text-input">
+            <input class="form-control" type="text" value="$title" id="example-text-input">
           </div>
         </div>
         <div class="form-group">
           <label for="example-text-input" class="col-2 col-form-label">Date</label>
           <div class="col-10">
-            <input class="form-control" type="text" value="Monday" id="example-text-input">
+            <input class="form-control" type="text" value="$date" id="example-text-input">
           </div>
         </div>
         <div class="form-group">
           <label for="exampleTextarea">Content</label>
-          <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
+          <textarea class="form-control" id="exampleTextarea" rows="3">$content</textarea>
         </div>
         <a class="btn btn-primary" href="#" role="button">Reply</a>
         <a class="btn btn-success" href="forward?$forwardQuery" role="button">Forward</a>
