--- a/frontend/html/forward-email.html
+++ b/frontend/html/forward-email.html
@@ -20,7 +20,7 @@
         <div class="form-group">
           <label for="example-email-input" class="col-2 col-form-label">To</label>
           <div class="col-10">
-            <input class="form-control" name="sentto" type="email" value="$email" id="example-email-input">
+            <input class="form-control" name="sentto" type="email" value="username@gmail.com" id="example-email-input">
           </div>
         </div>
         <div class="form-group">
