add delete email frontend support

--- a/frontend/html/view-email.html
+++ b/frontend/html/view-email.html
@@ -41,7 +41,7 @@
         </div>
         <a class="btn btn-primary" href="replyemail?$replyQuery" role="button">Reply</a>
         <a class="btn btn-success" href="forward?$forwardQuery" role="button">Forward</a>
-        <a class="btn btn-danger" href="#" role="button">Delete</a>
+        <a class="btn btn-danger" href="deleteemail?$deleteQuery" role="button">Delete</a>
       </form>
     </div>
   </body>
