add load balancer redirect

--- a/frontend/html/redirect-this-server.html
+++ b/frontend/html/redirect-this-server.html
@@ -15,7 +15,7 @@
   <body>
     <div class="container">
       <h1>
-        Redirect to server #$serverId
+        Redirect to server  <a href="http://$server">$server</a>
       </h1>
     </div>
   </body>
