--- a/frontend/html/admin-console.html
+++ b/frontend/html/admin-console.html
@@ -16,7 +16,7 @@
     <div class="container">
       <h1>Admin Console</h1>
       <h3><span class="label label-info">Frontend Server</span></h3>
-      <table class="table table-striped">
+      <table class="table table-hover">
         <thead class="thead-inverse">
           <tr>
             <th>IP</th>
@@ -31,7 +31,7 @@
       <hr />
 
       <h3><span class="label label-warning">Backend Server</span></h3>
-      <table class="table table-striped">
+      <table class="table table-hover">
         <thead class="thead-inverse">
           <tr>
             <th>IP</th>
