--- a/frontend/html/user-already-exist.html
+++ b/frontend/html/user-already-exist.html
@@ -2,14 +2,44 @@
 <html>
   <head>
     <title>PennCloud</title>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </head>
+
   <body>
-    <h1>Username already exists!</h1>
-    <form method="POST">
-      username: <input type="text" name="username" required><br>
-      password: <input type="password" name="password" required><br>
-      <input type="submit" value="Register">
-    </form>
-    <a href="/login">Already have an account? Login here!</a>
+    <div class="container">
+      <h1>Username already exists!</h1>
+      <div class="row">
+        <div class="col-sm-5">
+          <form method="POST">
+            <div class="form-group row">
+              <label for="inputEmail3" class="col-sm-2 col-form-label">username</label>
+              <div class="col-sm-10">
+                <input type="text" name="username" class="form-control" id="inputEmail3" required>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="inputPassword3" class="col-sm-2 col-form-label">password</label>
+              <div class="col-sm-10">
+                <input type="password" name="password" class="form-control" id="inputPassword3" required>
+              </div>
+            </div>
+            <div class="form-group row">
+              <div class="offset-sm-2 col-sm-10">
+                <button type="submit" class="btn btn-primary">Login</button>
+              </div>
+            </div>
+          </form>
+          <a class="btn btn-info" href="register" role="button">New user? Register here!</a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
